# Covid-Simulation

./: CMakeLists.txt  Dockerfile  README.md  disease_details.csv  disease_stats.csv
analysis/: plot_statistics.py
configExample/: disease_details.csv  disease_in.ini  disease_stats.csv
examples/deterministic/: disease_in.ini
examples/single_population/: disease_in.ini
simulation/: main.cpp  simulation.cpp  simulation.h  test.cpp
